    many cases could cause confusing truncation of long messages. Use heap
    allocated formatted strings instead:
    - In start-stop-daemon to report what to stop.
    - In dselect to print main and access methods menu entries.
    - In libdpkg command-line option parsing errors.
    - In libdpkg warning, notice and info reporting.
  * Colorize all fatal-error printing codepaths in libdpkg.
  * Perl modules:
    - Relax dependency restrictions parsing to allow again sloppy spaces
      around versions, architectures and profile restrictions.
      Regression introduced in 1.18.5. Closes: #823431
    - Add new require_strong_checksums option to Dpkg::Source::Package.
  * Documentation:
    - Shorten example symbol names in dpkg-gensymbols to avoid a mandb
      warning due to unwrappable lines in translations.

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Tue, 03 May 2016 21:07:19 +0200

dpkg (1.18.6) unstable; urgency=medium

  [ Guillem Jover ]
  * Fix file queue tail assignment on file queue pop during unpack. This
    could mess up the file queue in some circumstances and leave behind
    files in the filesystem as «pathname».dpkg-new after configuration
    and without traces of the files in the dpkg database. Closes: #823288
  * Use m_strdup() instead of strdup() in dpkg recursive installation code.
  * Fix off-by-one array allocation in dpkg recursive installation code that
    can cause segfaults.
  * Rename sysctl() “name” variable to “mib”, to avoid a clash with the
    call site function argument with the same name in start-stop-daemon.
    This fixes a build failure on */kFreeBSD systems.
  * Initialize number of entries on initial process scan in start-stop-daemon
    on */kFreeBSD.
  * Packaging:
    - Bump Standards-Version to 3.9.8 (no changes needed).

  [ Updated programs translations ]
  * German (Sven Joachim).
